--- a/templates/basemusic.html
+++ b/templates/basemusic.html
@@ -6,7 +6,7 @@
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
+<script src="/static/scripts/script.js"></script> 
 </head>
 
 
@@ -14,15 +14,10 @@
 
 {% block header %} {% endblock %}
 
-
 {% block content %} {% endblock %}
-
 
 {% block footer %} {% endblock %}
 
 </body>
-
-
-
 
 </html>
