--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 
+{% block title %}Wiki{% endblock %}
+
 {% block content %}
-    <h1>{% block title %} About {% endblock %}</h1>
-    <h3>FlaskApp is a Flask web application written in Python.</h3>
+    <p>Python + Flask framework
+    <p>
+    <p>Spotify api <a href='https://developer.spotify.com/'>Spotify</a>
+    <p>Deezer, MusicBrainz, Lastfm, Discogs api not working for retrieving artist images
 {% endblock %}
