--- a/templates/basemusic.html
+++ b/templates/basemusic.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title>W3.CSS</title>
+<title>Music charts</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="/static/scripts/script.js"></script> 
