Tuesday 22 my css

--- a/templates/start.html
+++ b/templates/start.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href=https://fonts.googleapis.com/css?family=Poppins>
 
 
-<script src="/static/scripts/script.js"></script>
+<script src="/static/scripts/script-w3.js"></script>
 
 <style>
 
